--- a/locales/de.json
+++ b/locales/de.json
@@ -32,7 +32,8 @@
         "de": "Deutsch",
         "fr": "Französisch",
         "pt": "Portugiesisch",
-        "ru": "Russisch"
+        "ru": "Russisch",
+        "es": "Spanisch"
     },
     "quit_cursor": {
         "start": "Beginne Cursor zu Beenden",
