--- a/locales/en.json
+++ b/locales/en.json
@@ -35,7 +35,8 @@
         "pt": "Portuguese",
         "ru": "Russian",
         "tr": "Turkish",
-        "bg": "Bulgarian"
+        "bg": "Bulgarian",
+        "es": "Spanish"
     },
     "quit_cursor": {
         "start": "Start Quitting Cursor",
