--- a/locales/nl.json
+++ b/locales/nl.json
@@ -30,7 +30,8 @@
         "de": "Duits",
         "fr": "Frans",
         "pt": "Portugees",
-        "ru": "Russisch"
+        "ru": "Russisch",
+        "es": "Spaans"
     },
     "quit_cursor": {
         "start": "Start met afsluiten van Cursor",
