--- a/locales/pt.json
+++ b/locales/pt.json
@@ -30,7 +30,8 @@
         "de": "Alemão",
         "fr": "Francês",
         "pt": "Português do Brasil",
-        "ru": "Russo"
+        "ru": "Russo",
+        "es": "Espanhol"
     },
     "quit_cursor": {
         "start": "Iniciando fechamento do Cursor",
