--- a/locales/ru.json
+++ b/locales/ru.json
@@ -30,7 +30,8 @@
         "de": "Немецкий",
         "fr": "Французский",
         "pt": "Бразильский португальский",
-        "ru": "Русский"
+        "ru": "Русский",
+        "es": "Испанский"
     },
     "quit_cursor": {
         "start": "Начало закрытия Cursor",
