--- a/locales/vi.json
+++ b/locales/vi.json
@@ -28,7 +28,8 @@
         "de": "Tiếng Đức",
         "fr": "Tiếng Pháp",
         "pt": "Tiếng Bồ Đào Nha",
-        "ru": "Tiếng Nga"
+        "ru": "Tiếng Nga",
+        "es": "Tiếng Tây Ban Nha"
     },
     "quit_cursor": {
         "start": "Bắt Đầu Thoát Cursor",
