--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -35,7 +35,8 @@
         "pt": "葡萄牙语",
         "ru": "俄语",
         "tr": "土耳其语",
-        "bg": "保加利亚语"
+        "bg": "保加利亚语",
+        "es": "西班牙语"
     },
     "quit_cursor": {
         "start": "开始退出 Cursor",
