--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -33,7 +33,8 @@
         "pt": "葡萄牙文",
         "ru": "俄文",
         "tr": "土耳其文",
-        "bg": "保加利亞文"
+        "bg": "保加利亞文",
+        "es": "西班牙文"
     },
     "quit_cursor": {
         "start": "開始退出 Cursor",
