--- a/locales/en.json
+++ b/locales/en.json
@@ -102,8 +102,8 @@
         "package_not_found": "Package.json Not Found: {path}",
         "check_version_failed": "Check Version Failed: {error}",
         "stack_trace": "Stack Trace",
-        "version_too_low": "Cursor Version Too Low: {version} < 0.45.0"
-        
+        "version_too_low": "Cursor Version Too Low: {version} < 0.45.0",
+        "no_write_permission": "No Write Permission: {path}"
     },
     "register": {
         "title": "Cursor Registration Tool",
