--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -102,7 +102,8 @@
         "package_not_found": "package.json未找到: {path}",
         "check_version_failed": "检查版本失败: {error}",
         "stack_trace": "堆栈跟踪",
-        "version_too_low": "Cursor版本太低: {version} < 0.45.0"
+        "version_too_low": "Cursor版本太低: {version} < 0.45.0",
+        "no_write_permission": "没有写入权限: {path}"
     },
     "register": {
         "title": "Cursor 注册工具",
