--- a/locales/en.json
+++ b/locales/en.json
@@ -292,7 +292,8 @@
         "update_yml_cleared": "update.yml file cleared",
         "update_yml_not_found": "update.yml file not found",
         "clear_update_yml_failed": "Failed to clear update.yml file: {error}",
-        "unsupported_os": "Unsupported OS: {system}"
+        "unsupported_os": "Unsupported OS: {system}",
+        "remove_directory_failed": "Failed to remove directory: {error}"
     },
     "updater": {
         "checking": "Checking for updates...",
