--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -287,7 +287,8 @@
         "update_yml_cleared": "update.yml 文件已清空",
         "update_yml_not_found": "update.yml 文件未找到",
         "clear_update_yml_failed": "清空 update.yml 文件失败: {error}",
-        "unsupported_os": "不支持的操作系统: {system}"
+        "unsupported_os": "不支持的操作系统: {system}",
+        "remove_directory_failed": "删除目录失败: {error}"
     },
     "updater": {
         "checking": "检查更新...",
