--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -267,7 +267,8 @@
         "update_yml_not_found": "update.yml 文件未找到",
         "clear_update_yml_failed": "清空 update.yml 文件失败: {error}",
         "unsupported_os": "不支持的操作系统: {system}",
-        "remove_directory_failed": "刪除目錄失败: {error}"
+        "remove_directory_failed": "刪除目錄失败: {error}",
+        "create_block_file_failed": "創建阻止文件失败: {error}"
     },
     "updater": {
         "checking": "檢查更新...",
