Refactor reset_machine_manual.py to remove deprecated comments and add new error message translations for file modification failures in English, Simplified Chinese, and Traditional Chinese locales.

--- a/locales/en.json
+++ b/locales/en.json
@@ -105,7 +105,8 @@
         "stack_trace": "Stack Trace",
         "version_too_low": "Cursor Version Too Low: {version} < 0.45.0",
         "no_write_permission": "No Write Permission: {path}",
-        "path_not_found": "Path Not Found: {path}"
+        "path_not_found": "Path Not Found: {path}",
+        "modify_file_failed": "Modify File Failed: {error}"
     },
     "register": {
         "title": "Cursor Registration Tool",
