refactor: enhance user feedback and error messages with translation support across multiple modules

--- a/locales/zh_tw.json
+++ b/locales/zh_tw.json
@@ -254,7 +254,14 @@
         "blocked_domains_loaded_timeout_error": "加載被屏蔽的域名超時錯誤: {error}",
         "available_domains_loaded": "獲取到 {count} 個可用域名",
         "domains_filtered": "過濾後剩餘 {count} 個可用域名",
-        "trying_to_create_email": "嘗試創建郵箱: {email}"
+        "trying_to_create_email": "嘗試創建郵箱: {email}",
+        "domain_blocked": "域名被屏蔽: {domain}",
+        "using_chrome_profile": "使用 Chrome 配置文件: {user_data_dir}",
+        "no_display_found": "未找到顯示器。確保 X 伺服器正在運行。",
+        "try_export_display": "嘗試: export DISPLAY=:0",
+        "extension_load_error": "加載插件失敗: {error}",
+        "make_sure_chrome_chromium_is_properly_installed": "確保 Chrome/Chromium 已正確安裝",
+        "try_install_chromium": "嘗試: sudo apt install chromium-browser"
     },
     "update": {
         "title": "禁用 Cursor 自动更新",
@@ -478,7 +485,7 @@
         "file_group": "文件組",
         "error_getting_file_stats": "獲取文件統計信息時出錯",
         "permission_denied": "權限拒絕",
-        "try_running": "嘗試運行 'cursor --help' 檢查是否已安裝",
+        "try_running": "嘗試運行: {command}",
         "and": "和",
         "storage_file_is_empty": "儲存文件為空",
         "the_file_might_be_corrupted_please_reinstall_cursor": "文件可能已損壞，請重新安裝 Cursor",
@@ -487,7 +494,64 @@
         "config_option_added": "添加配置選項",
         "config_updated": "配置更新",
         "config_created": "配置已創建",
-        "config_setup_error": "配置設置錯誤"
+        "config_setup_error": "配置設置錯誤",
+        "storage_file_is_valid_and_contains_data": "儲存文件有效且包含數據",
+        "error_reading_storage_file": "讀取儲存文件時出錯",
+        "also_checked": "也檢查了 {path}"
 
+    },
+    "oauth": {
+        "authentication_button_not_found": "未找到認證按鈕",
+        "authentication_failed": "認證失敗: {error}",
+        "found_cookies": "找到 {count} 個 Cookie",
+        "token_extraction_error": "Token 提取錯誤: {error}",
+        "authentication_successful": "認證成功 - 郵箱: {email}",
+        "missing_authentication_data": "缺少認證數據: {data}",
+        "failed_to_delete_account": "刪除帳戶失敗: {error}",
+        "invalid_authentication_type": "無效的認證類型",
+        "auth_update_success": "認證更新成功",
+        "browser_closed": "瀏覽器已關閉",
+        "auth_update_failed": "認證更新失敗",
+        "google_start": "Google 開始",
+        "github_start": "Github 開始",
+        "usage_count": "使用量: {usage}",
+        "account_has_reached_maximum_usage": "帳戶已達到最大使用量, {deleting}",
+        "starting_new_authentication_process": "開始新的認證過程...",
+        "failed_to_delete_expired_account": "刪除過期帳戶失敗",
+        "could_not_check_usage_count": "無法檢查使用量: {error}",
+        "found_email": "找到郵箱: {email}",
+        "could_not_find_email": "未找到郵箱: {error}",
+        "could_not_find_usage_count": "未找到使用量: {erro  r}",
+        "already_on_settings_page": "已處於設置頁面",
+        "failed_to_extract_auth_info": "提取認證信息失敗: {error}",
+        "no_chrome_profiles_found": "未找到 Chrome 配置文件, 使用默認配置文件",
+        "found_default_chrome_profile": "找到默認 Chrome 配置文件",
+        "using_first_available_chrome_profile": "使用第一個可用的 Chrome 配置文件: {profile}",
+        "error_finding_chrome_profile": "找不到 Chrome 配置文件, 使用默認配置文件: {error}",
+        "initializing_browser_setup": "初始化瀏覽器設置...",
+        "detected_platform": "檢測平台: {platform}",
+        "running_as_root_warning": "以 root 運行不推薦用於瀏覽器自動化",
+        "consider_running_without_sudo": "考慮不使用 sudo 運行腳本",
+        "no_compatible_browser_found": "未找到兼容的瀏覽器。請安裝 Google Chrome 或 Chromium。",
+        "supported_browsers": "支持的瀏覽器: {platform}",
+        "using_browser_profile": "使用瀏覽器配置文件: {profile}",
+        "starting_browser": "正在啟動瀏覽器: {path}",
+        "browser_setup_completed": "瀏覽器設置完成成功",
+        "browser_setup_failed": "瀏覽器設置失敗: {error}",
+        "try_running_without_sudo_admin": "嘗試不使用 sudo/管理員權限運行",
+        "redirecting_to_authenticator_cursor_sh": "重定向到 authenticator.cursor.sh...",
+        "starting_github_authentication": "開始 Github 認證...",
+        "waiting_for_authentication": "等待認證...",
+        "page_changed_checking_auth": "頁面改變, 檢查認證...",
+        "status_check_error": "狀態檢查錯誤: {error}",
+        "authentication_timeout": "認證超時",
+        "account_is_still_valid": "帳戶仍然有效 (使用量: {usage})",
+        "starting_re_authentication_process": "開始重新認證過程...",
+        "starting_new_google_authentication": "開始新的 Google 認證...",
+        "failed_to_delete_account_or_re_authenticate": "刪除帳戶或重新認證失敗: {error}",
+        "navigating_to_authentication_page": "正在導航到認證頁面...",
+        "please_select_your_google_account_to_continue": "請選擇您的 Google 帳戶以繼續...",
+        "found_browser_data_directory": "找到瀏覽器數據目錄: {path}",
+        "authentication_successful_getting_account_info": "認證成功, 獲取帳戶信息..."
     }
 } 
