--- a/locales/en.json
+++ b/locales/en.json
@@ -280,7 +280,13 @@
         "available_domains_loaded": "Available Domains Loaded: {count}",
         "domains_filtered": "Domains Filtered: {count}",
         "trying_to_create_email": "Trying to create email: {email}",
-        "domain_blocked": "Domain Blocked: {domain}"
+        "domain_blocked": "Domain Blocked: {domain}",
+        "using_chrome_profile": "Using Chrome profile from: {user_data_dir}",
+        "no_display_found": "No display found. Make sure X server is running.",
+        "try_export_display": "Try: export DISPLAY=:0",
+        "extension_load_error": "Extension Load Error: {error}",
+        "make_sure_chrome_chromium_is_properly_installed": "Make sure Chrome/Chromium is properly installed",
+        "try_install_chromium": "Try: sudo apt install chromium-browser"
     },
     "update": {
         "title": "Disable Cursor Auto Update",
@@ -498,14 +504,14 @@
         "please_make_sure_cursor_is_installed_and_has_been_run_at_least_once": "Please make sure Cursor is installed and has been run at least once",
         "storage_directory_not_found": "Storage directory not found: {storage_dir}",
         "storage_file_found": "Storage file found: {storage_path}",
-        "file_size": "File size: {size}",
+        "file_size": "File size: {size} bytes",
         "file_permissions": "File permissions: {permissions}",
         "file_owner": "File owner: {owner}",
         "file_group": "File group: {group}",
         "error_getting_file_stats": "Error getting file stats: {error}",
         "permission_denied": "Permission denied: {storage_path}",
-        "try_running": "Try running 'cursor --help' to check if it's installed",
-        "and": "and",
+        "try_running": "Try running: {command}",
+        "and": "And",
         "storage_file_is_empty": "Storage file is empty: {storage_path}",
         "the_file_might_be_corrupted_please_reinstall_cursor": "The file might be corrupted, please reinstall Cursor",
         "storage_file_not_found": "Storage file not found: {storage_path}",
@@ -513,7 +519,64 @@
         "config_option_added": "Config option added: {option}",
         "config_updated": "Config updated",
         "config_created": "Config created: {config_file}",
-        "config_setup_error": "Error setting up config: {error}"
-
+        "config_setup_error": "Error setting up config: {error}",
+        "storage_file_is_valid_and_contains_data": "Storage file is valid and contains data",
+        "error_reading_storage_file": "Error reading storage file: {error}",
+        "also_checked": "Also checked {path}"
+    },
+    "oauth": {
+        "authentication_button_not_found": "Authentication button not found",
+        "authentication_failed": "Authentication failed: {error}",
+        "found_cookies": "Found {count} cookies",
+        "token_extraction_error": "Token extraction error: {error}",
+        "authentication_successful": "Authentication successful - Email: {email}",
+        "missing_authentication_data": "Missing authentication data: {data}",
+        "failed_to_delete_account": "Failed to delete account: {error}",
+        "invalid_authentication_type": "Invalid authentication type",
+        "auth_update_success": "Auth update success",
+        "browser_closed": "Browser closed",
+        "auth_update_failed": "Auth update failed",
+        "google_start": "Google start",
+        "github_start": "Github start",
+        "usage_count": "Usage count: {usage}",
+        "account_has_reached_maximum_usage": "Account has reached maximum usage, {deleting}",
+        "starting_new_authentication_process": "Starting new authentication process...",
+        "failed_to_delete_expired_account": "Failed to delete expired account",
+        "could_not_check_usage_count": "Could not check usage count: {error}",
+        "found_email": "Found email: {email}",
+        "could_not_find_email": "Could not find email: {error}",
+        "could_not_find_usage_count": "Could not find usage count: {error}",
+        "already_on_settings_page": "Already on settings page!",
+        "failed_to_extract_auth_info": "Failed to extract auth info: {error}",
+        "no_chrome_profiles_found": "No Chrome profiles found, using Default",
+        "found_default_chrome_profile": "Found Default Chrome profile",
+        "using_first_available_chrome_profile": "Using first available Chrome profile: {profile}",
+        "error_finding_chrome_profile": "Error finding Chrome profile, using Default: {error}",
+        "initializing_browser_setup": "Initializing browser setup...",
+        "detected_platform": "Detected platform: {platform}",
+        "running_as_root_warning": "Running as root is not recommended for browser automation",
+        "consider_running_without_sudo": "Consider running the script without sudo",
+        "no_compatible_browser_found": "No compatible browser found. Please install Google Chrome or Chromium.",
+        "supported_browsers": "Supported browsers for {platform}",
+        "using_browser_profile": "Using browser profile: {profile}",
+        "starting_browser": "Starting browser at: {path}",
+        "browser_setup_completed": "Browser setup completed successfully",
+        "browser_setup_failed": "Browser setup failed: {error}",
+        "try_running_without_sudo_admin": "Try running without sudo/administrator privileges",
+        "redirecting_to_authenticator_cursor_sh": "Redirecting to authenticator.cursor.sh...",
+        "starting_google_authentication": "Starting Google authentication...",
+        "starting_github_authentication": "Starting GitHub authentication...",
+        "waiting_for_authentication": "Waiting for authentication...",
+        "page_changed_checking_auth": "Page changed, checking auth...",
+        "status_check_error": "Status check error: {error}",
+        "authentication_timeout": "Authentication timeout",
+        "account_is_still_valid": "Account is still valid (Usage: {usage})",
+        "starting_re_authentication_process": "Starting re-authentication process...",
+        "starting_new_google_authentication": "Starting new Google authentication...",
+        "failed_to_delete_account_or_re_authenticate": "Failed to delete account or re-authenticate: {error}",
+        "navigating_to_authentication_page": "Navigating to authentication page...",
+        "please_select_your_google_account_to_continue": "Please select your Google account to continue...",
+        "found_browser_data_directory": "Found browser data directory: {path}",
+        "authentication_successful_getting_account_info": "Authentication successful, getting account info..."
     }
-}   
+}
