--- a/locales/zh_cn.json
+++ b/locales/zh_cn.json
@@ -275,7 +275,13 @@
         "available_domains_loaded": "获取到 {count} 个可用域名",
         "domains_filtered": "过滤后剩餘 {count} 個可用域名",
         "trying_to_create_email": "尝试创建邮箱: {email}",
-        "domain_blocked": "域名被屏蔽: {domain}"
+        "domain_blocked": "域名被屏蔽: {domain}",
+        "using_chrome_profile": "使用 Chrome 配置文件: {user_data_dir}",
+        "no_display_found": "未找到显示器。确保 X 服务器正在运行。",
+        "try_export_display": "尝试: export DISPLAY=:0",
+        "extension_load_error": "加载插件失败: {error}",
+        "make_sure_chrome_chromium_is_properly_installed": "确保 Chrome/Chromium 已正确安装",
+        "try_install_chromium": "尝试: sudo apt install chromium-browser"
     },
     "update": {
         "title": "禁用 Cursor 自动更新",
@@ -499,7 +505,7 @@
         "file_group": "文件组",
         "error_getting_file_stats": "获取文件统计信息时出错",
         "permission_denied": "权限拒绝",
-        "try_running": "尝试运行 'cursor --help' 检查是否已安装",
+        "try_running": "尝试运行: {command}",
         "and": "和",
         "storage_file_is_empty": "存储文件为空",
         "the_file_might_be_corrupted_please_reinstall_cursor": "文件可能已损坏，请重新安装 Cursor",
@@ -508,7 +514,65 @@
         "config_option_added": "添加配置选项",
         "config_updated": "配置更新",
         "config_created": "配置已创建",
-        "config_setup_error": "配置设置错误"
+        "config_setup_error": "配置设置错误",
+        "storage_file_is_valid_and_contains_data": "存储文件有效且包含数据",
+        "error_reading_storage_file": "读取存储文件时出错",
+        "also_checked": "也检查了 {path}"
+    },
+    "oauth": {
+        "authentication_button_not_found": "未找到认证按钮",
+        "authentication_failed": "认证失败: {error}",
+        "found_cookies": "找到 {count} 个 Cookie",
+        "token_extraction_error": "Token 提取错误: {error}",
+        "authentication_successful": "认证成功 - 邮箱: {email}",
+        "missing_authentication_data": "缺少认证数据: {data}",
+        "failed_to_delete_account": "删除账户失败: {error}",
+        "invalid_authentication_type": "无效的认证类型",
+        "auth_update_success": "认证更新成功",
+        "browser_closed": "浏览器已关闭",
+        "auth_update_failed": "认证更新失败",
+        "google_start": "Google 开始",
+        "github_start": "Github 开始",
+        "usage_count": "使用次数: {usage}",
+        "account_has_reached_maximum_usage": "账户已达到最大使用量, {deleting}",
+        "starting_new_authentication_process": "开始新的认证过程...",
+        "failed_to_delete_expired_account": "删除过期账户失败",
+        "could_not_check_usage_count": "无法检查使用次数: {error}",
+        "found_email": "找到邮箱: {email}",
+        "could_not_find_email": "未找到邮箱: {error}",
+        "could_not_find_usage_count": "未找到使用次数: {error}",
+        "already_on_settings_page": "已处于设置页面",
+        "failed_to_extract_auth_info": "提取认证信息失败: {error}",
+        "no_chrome_profiles_found": "未找到 Chrome 配置文件, 使用默认配置文件",
+        "found_default_chrome_profile": "找到默认 Chrome 配置文件",
+        "using_first_available_chrome_profile": "使用第一个可用的 Chrome 配置文件: {profile}",
+        "error_finding_chrome_profile": "找不到 Chrome 配置文件, 使用默认配置文件: {error}",
+        "initializing_browser_setup": "初始化浏览器设置...",
+        "detected_platform": "检测平台: {platform}",
+        "running_as_root_warning": "以 root 运行不推荐用于浏览器自动化",
+        "consider_running_without_sudo": "考虑不使用 sudo 运行脚本",
+        "no_compatible_browser_found": "未找到兼容的浏览器。请安装 Google Chrome 或 Chromium。",
+        "supported_browsers": "支持的浏览器: {platform}",
+        "using_browser_profile": "使用浏览器配置文件: {profile}",
+        "starting_browser": "正在启动浏览器: {path}",
+        "browser_setup_completed": "浏览器设置完成",
+        "browser_setup_failed": "浏览器设置失败: {error}",
+        "try_running_without_sudo_admin": "尝试不使用 sudo/管理员权限运行",
+        "redirecting_to_authenticator_cursor_sh": "重定向到 authenticator.cursor.sh...",
+        "starting_google_authentication": "开始 Google 认证...",
+        "starting_github_authentication": "开始 Github 认证...",
+        "waiting_for_authentication": "等待认证...",
+        "page_changed_checking_auth": "页面改变, 检查认证...",
+        "status_check_error": "状态检查错误: {error}",
+        "authentication_timeout": "认证超时",
+        "account_is_still_valid": "账户仍然有效 (使用量: {usage})",
+        "starting_re_authentication_process": "开始重新认证过程...",
+        "starting_new_google_authentication": "开始新的 Google 认证...",
+        "failed_to_delete_account_or_re_authenticate": "删除账户或重新认证失败: {error}",
+        "navigating_to_authentication_page": "正在导航到认证页面...",
+        "please_select_your_google_account_to_continue": "请选择您的 Google 账户以继续...",
+        "found_browser_data_directory": "找到浏览器数据目录: {path}",
+        "authentication_successful_getting_account_info": "认证成功, 获取账户信息..."
     }
 
 } 
