--- a/locales/en.json
+++ b/locales/en.json
@@ -25,7 +25,8 @@
         "coming_soon": "Coming Soon",
         "fixed_soon": "Fixed Soon",
         "contribute": "Contribute to the Project",
-        "config": "Show Config"
+        "config": "Show Config",
+        "delete_google_account": "Delete Cursor Google Account"
     },
     "languages": {
         "en": "English",
@@ -433,7 +434,24 @@
         "cursor_reset_completed": "Cursor AI Editor has been fully reset and trial detection bypassed!",
         "cursor_reset_failed": "Cursor AI Editor reset failed: {error}",
         "cursor_reset_cancelled": "Cursor AI Editor reset cancelled. Exiting without making any changes.",
-        "operation_cancelled": "Operation cancelled. Exiting without making any changes."
+        "operation_cancelled": "Operation cancelled. Exiting without making any changes.",
+        "navigating_to_settings": "Navigating to settings page...",
+        "already_on_settings": "Already on settings page",
+        "login_redirect_failed": "Login redirection failed, trying direct navigation...",
+        "advanced_tab_not_found": "Advanced tab not found after multiple attempts",
+        "advanced_tab_retry": "Advanced tab not found, attempt {attempt}/{max_attempts}",
+        "advanced_tab_error": "Error finding Advanced tab: {error}",
+        "advanced_tab_clicked": "Clicked on Advanced tab",
+        "direct_advanced_navigation": "Trying direct navigation to advanced tab",
+        "delete_button_not_found": "Delete Account button not found after multiple attempts",
+        "delete_button_retry": "Delete button not found, attempt {attempt}/{max_attempts}",
+        "delete_button_error": "Error finding Delete button: {error}",
+        "delete_button_clicked": "Clicked on Delete Account button",
+        "found_danger_zone": "Found Danger Zone section",
+        "delete_input_not_found": "Delete confirmation input not found after multiple attempts",
+        "delete_input_retry": "Delete input not found, attempt {attempt}/{max_attempts}",
+        "delete_input_error": "Error finding Delete input: {error}",
+        "delete_input_not_found_continuing": "Delete confirmation input not found, trying to continue anyway"
     },
     "github_register": {
         "title": "GitHub + Cursor AI Registration Automation",
@@ -594,5 +612,48 @@
         "profile_selected": "Selected profile: {profile}",
         "invalid_selection": "Invalid selection. Please try again",
         "warning_chrome_close": "Warning: This will close all running Chrome processes"
+    },
+    "account_delete": {
+        "title": "Cursor Google Account Deletion Tool",
+        "warning": "WARNING: This will permanently delete your Cursor account. This action cannot be undone.",
+        "cancelled": "Account deletion cancelled.",
+        "starting_process": "Starting account deletion process...",
+        "google_button_not_found": "Google login button not found",
+        "logging_in": "Logging in with Google...",
+        "waiting_for_auth": "Waiting for Google authentication...",
+        "login_successful": "Login successful",
+        "unexpected_page": "Unexpected page after login: {url}",
+        "trying_settings": "Trying to navigate to settings page...",
+        "select_google_account": "Please select your Google account...",
+        "auth_timeout": "Authentication timeout, continuing anyway...",
+        "navigating_to_settings": "Navigating to settings page...",
+        "already_on_settings": "Already on settings page",
+        "login_redirect_failed": "Login redirection failed, trying direct navigation...",
+        "advanced_tab_not_found": "Advanced tab not found after multiple attempts",
+        "advanced_tab_retry": "Advanced tab not found, attempt {attempt}/{max_attempts}",
+        "advanced_tab_error": "Error finding Advanced tab: {error}",
+        "advanced_tab_clicked": "Clicked on Advanced tab",
+        "direct_advanced_navigation": "Trying direct navigation to advanced tab",
+        "delete_button_not_found": "Delete Account button not found after multiple attempts",
+        "delete_button_retry": "Delete button not found, attempt {attempt}/{max_attempts}",
+        "delete_button_error": "Error finding Delete button: {error}",
+        "delete_button_clicked": "Clicked on Delete Account button",
+        "found_danger_zone": "Found Danger Zone section",
+        "delete_input_not_found": "Delete confirmation input not found after multiple attempts",
+        "delete_input_retry": "Delete input not found, attempt {attempt}/{max_attempts}",
+        "delete_input_error": "Error finding Delete input: {error}",
+        "delete_input_not_found_continuing": "Delete confirmation input not found, trying to continue anyway",
+        "typed_delete": "Typed \"Delete\" in confirmation box",
+        "confirm_button_not_found": "Confirm button not found after multiple attempts",
+        "confirm_button_retry": "Confirm button not found, attempt {attempt}/{max_attempts}",
+        "confirm_button_error": "Error finding Confirm button: {error}",
+        "account_deleted": "Account deleted successfully!",
+        "error": "Error during account deletion: {error}",
+        "success": "Your Cursor account has been successfully deleted!",
+        "failed": "Account deletion process failed or was cancelled.",
+        "interrupted": "Account deletion process interrupted by user.",
+        "unexpected_error": "Unexpected error: {error}",
+        "found_email": "Found email: {email}",
+        "email_not_found": "Email not found: {error}"
     }
 }   
